# HW1-FAST-AQ-Parser

./: README.md  example.py  hw1_test.ipynb  pyproject.toml
.github/workflows/: ci.yml
seqparser/: parse.py  seq.py
tests/: test_parsers.py  test_transcribe.py
