[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.9'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "seqparser"
authors = [{name = "Tracy Lou", email = "tracy.lou@ucsf.edu>"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["pytest"]
[tool.coverage.run]
source = ["src"] # parent directory of package

[project.urls]
Home = "https://github.com/tlouskt/HW1-FAST-AQ-Parser"
